app/styles/style.default.css
/*
Created by: @themepixels
URL: http://themepixels.com/

[TABLE OF CONTENTS]

1.  IMPORTS
2.  RESET STYLES
3.  HEADER STYLES
    3.1 HEADER LEFT
    3.2 HEADER RIGHT
4.  MAIN WRAPPER STYLES
    4.1 LEFT PANEL STYLES
        4.1.1 LEFT PANEL NAVIGATION
    4.2 MAIN PANEL STYLES
        4.2.1 CONTENT PANEL STYLES
5.  MESSAGES STYLES
6.  UI ELEMENTS STYLES
    6.1 BUTTONS PAGE STYLES
    6.2 EXTRAS STYLES
    6.3 GRAPHS STYLES
    6.4 ICON STYLES
    6.5 PANELS & WIDGET STYLES
    6.6 TABS & ACCORDION STYLES
7.  FORM STYLES
    7.1 FORM WIZARD STYLES
8.  TABLE STYLES
9.  PAGES STYLES
    9.1 NOT FOUND PAGE STYLES
    9.2 INVOICE STYLES
    9.3 MEDIA MANAGER STYLES
    9.4 PEOPLE DIRECTORY STYLES
    9.5 PROFILE STYLES
    9.6 SEARCH RESULTS STYLES
    9.7 SIGN IN/UP PAGE STYLES
    9.8 LOCKED SCREEN STYLES
10. DASHBOARD STYLES
11. LEFT MENU COLLAPSE STYLES
12. CUSTOM STYLES
13. MEDIA QUERIES

*/


/********** 1. IMPORTS **********/
/********************************/

html {
    background: transparent !important;
}

body {
    font-size: 13px;
    color: #636E7B;
    background-color: #fff;
}



a {
    outline: none !important;
}
.plan01{/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#49c0f0+0,2cafe3+50,49c0f0+98 */
background: #49c0f0; /* Old browsers */
background: -moz-linear-gradient(top, #49c0f0 0%, #2cafe3 50%, #49c0f0 98%); /* FF3.6-15 */
background: -webkit-linear-gradient(top, #49c0f0 0%,#2cafe3 50%,#49c0f0 98%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to bottom, #49c0f0 0%,#2cafe3 50%,#49c0f0 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#49c0f0', endColorstr='#49c0f0',GradientType=0 ); /* IE6-9 */ color:#fff !important; border-bottom:5px solid #12579c; border-radius:10px;  }

.plan02{/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d5cea6+0,c9c190+40,b7ad70+100;Brown+3D */
background: #d5cea6; /* Old browsers */
background: -moz-linear-gradient(top, #d5cea6 0%, #c9c190 40%, #b7ad70 100%); /* FF3.6-15 */
background: -webkit-linear-gradient(top, #d5cea6 0%,#c9c190 40%,#b7ad70 100%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to bottom, #d5cea6 0%,#c9c190 40%,#b7ad70 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d5cea6', endColorstr='#b7ad70',GradientType=0 ); /* IE6-9 */color:#fff !important; border-bottom:5px solid #847b48; border-radius:10px;}


.plan03{/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b4e391+0,61c419+50,b4e391+100;Green+3D */
background-color:  #b4e391; /* Old browsers */
background: -moz-linear-gradient(top, #b4e391 0%, #61c419 50%, #b4e391 100%); /* FF3.6-15 */
background: -webkit-linear-gradient(top, #b4e391 0%,#61c419 50%,#b4e391 100%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to bottom, #b4e391 0%,#61c419 50%,#b4e391 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', endColorstr='#b4e391',GradientType=0 ); /* IE6-9 */color:#fff; border-radius:10px; border-bottom:5px solid #5a8409; }

a:hover,
a:active,
a:focus {
    text-decoration: none;
}
.tabel-blue{ background:#87ceeb ;}


/********** 3. HEADER STYLES **********/
/**************************************/

.headerwrapper {
    background-color: #428BCA;
    min-height: 60px;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

.panel-dashboard {
  padding: 50px 40px;
  box-shadow: 2px 2px 30px #c6c6c6;
  border: 1px solid #c6c6c6;
  width: 550px;
  margin: 0 auto;
  margin: 80px auto 0;
}

.mail-box-text {
  font-family: 'Roboto';
  font-weight: 500;
  font-size:27px;
}

.error-padding:before {
  border-bottom: 10px solid #f2dede;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  width: 0;
  height: 0;
  content: '';
  position: absolute;;
  top: -10px;
}

.overlay-text {
    position: absolute;
    background: rgba(0, 0, 0, 0.2);
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: 9999;
}

.promote li:nth-child(even) {
    width:160px;
}

.overlay-wrapper {
    position:relative;
}

.overlay-text p {
    position: absolute;
    left: 50%;
    margin-left: -70px;
    top: 50%;
    margin-top: -20px;
    font-size: 25px;
    color: #fff;
    font-weight: bold;
    font-family: Oswald,sans-serif;
}

.modal-body::after {
    content: url(https://s3-us-west-2.amazonaws.com/coinomia/images/watermark.png);
    opacity: 0.4;
    position: absolute;
    visibility: hidden;
    top: 10%;
    left: 25%;
    width: 1px;
    -webkit-transform: rotate(90deg) scale(0.2);
    -ms-transform: rotate(90deg) scale(0.2);
    transform: rotate(-45deg) scale(0.2);
}


.qr_code {
  float: left;
  margin-top: -10px;
  margin-left: 20px;
}

.bit-address strong {
  word-wrap: break-word;
}

.transaction .table {
  width: 100%;
  table-layout: fixed;
}

.transaction .table>tbody>tr>td {
  word-wrap: break-word;
}

.fund-button { padding: 0;}

button.close {
  position: absolute;
  z-index: 99;
  right: 10px;
}

.banlinks li a {
  font-size: 18px;
  color: #fff;
  font-weight: bold;
  position: relative;
}

#loadingDiv {
  position:fixed;
  top:0px;
  right:0px;
  width:100%;
  height:100%;
  background-color:#666;
  background-image:url('../images/ajax-loading.gif'); background-repeat:no-repeat;background-position:center;z-index:10000000;  opacity: 0.4;
  filter: alpha(opacity=40); /* For IE8 and earlier */
}

.add-funds-popup {
  background: #FC0;
  padding: 10px;
  color: #fff;
  border-radius: 30px;
  display: inline-block;
}

.bit-address {
  background: #525252;
  color: #fff;
  padding: 10px;
  border-radius: 30px;
}

.add-funds-popup strong {
  border-radius: 30px;
  background: #000;
  padding: 5px 20px;
}
/* ... */

